# mm-ibkr-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_demo_failure.py  test_demo_failure2.py  test_model_dump.py  test_model_side.py  test_pydantic_float.py  test_sqlite_demo.py  test_sqlite_float_precision.py  test_sqlite_json_extract.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/agents/: IBKR-Stockbroker.md
.opencode/skills/: ibkr-evaluate-order.md  ibkr-portfolio-snapshot.md
.opencode/skills/ibkr-place-order/: SKILL.md
.opencode/tools/: trade_calc.ts
deploy/linux/: README.md  docker-compose.yml
deploy/linux/scripts/: logs.sh  run_mcp_stdio.sh  setup_mcp_ssh_user.sh  start.sh  status.sh  stop.sh  verify_mcp_ssh.sh  verify_mcp_ssh_stdio.py
deploy/linux/ssh/sshd_config.d/: ibkr-mcp.conf.example
deploy/windows/: configure.ps1
docs/: API_REFERENCE.md  ARCHITECTURE.md
ibkr_core/: __init__.py  account.py  broker.py  cli.py  client.py  config.py  contracts.py  control.py  demo.py  logging_config.py  market_data.py  models.py  orders.py  paths.py  persistence.py  runtime_config.py  simulation.py
mcp_server/: __init__.py  config.py  errors.py  main.py  models.py  security.py  services.py
mcp_server/profiles/: __init__.py  loader.py  validator.py
mcp_server/risk/: __init__.py  impact.py  portfolio.py
mcp_server/telegram/: __init__.py  approval.py  bot.py  config.py  notifications.py
scripts/: run_mcp_stdio.sh  setup_mcp_ssh_user.sh
tests/: conftest.py  test_approval_auto_resolve.py  test_broker.py  test_client.py  test_config.py  test_contracts.py  test_market_data.py  test_mcp_errors.py  test_mcp_stdio_entrypoint.py  test_mcp_tools.py  test_mcp_transport.py  test_models.py  test_option_market_data.py  test_orders_advanced.py  test_orders_safety.py  test_persistence_audit.py  test_simulation_integration.py  test_trade_intents.py
trade_core/: __init__.py  idempotency.py  models.py  persistence.py
