[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mm-ibkr-gateway"
version = "0.1.0"
description = "IBKR integration + MCP tool server + NL interface"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[tool.poetry]
name = "mm-ibkr-gateway"
version = "0.1.0"
description = "IBKR integration + MCP tool server + NL interface"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "api"},
    {include = "ibkr_core"},
    {include = "mcp_server"},
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.11"
ib-insync = ">=0.9.17,<1.0"
fastapi = ">=0.104.0,<1.0"
uvicorn = ">=0.30,<1.0"
pydantic = ">=2.0,<3.0"
python-dotenv = ">=1.0,<2.0"
aiohttp = ">=3.9,<4.0"
loguru = ">=0.7,<1.0"
nest-asyncio = ">=1.5,<2.0"
mcp = ">=1.2,<2.0"
httpx = ">=0.25,<1.0"
typer = {version = ">=0.9.0,<1.0", extras = ["all"]}
rich = ">=13.7,<15.0"
anyio = ">=4.5,<5.0"
python-json-logger = ">=4.0.0,<5.0.0"
tzdata = ">=2024.1"
python-telegram-bot = {version = ">=20.0,<22.0", extras = ["job-queue"]}

[tool.poetry.scripts]
ibkr-gateway = "ibkr_core.cli:cli_main"
ibkr-mcp = "mcp_server.main:main"
ibkr-demo = "ibkr_core.demo:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.12"
isort = "^5.13"
mypy = "^1.7"
flake8 = "^6.1"
safety = "^2.3"
bandit = "^1.7"
pre-commit = "^3.6"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require running IBKR Gateway (deselect with '-m \"not integration\"')",
    "slow: marks tests that take a long time",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["ibkr_core", "api", "mcp_server"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/demo.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
